--- a/style.css
+++ b/style.css
@@ -28,16 +28,16 @@ textarea{
 
 .time-block{
   text-align: center;
-  border-radius: 15px;
+  /* border-radius: 15px; */
+  padding-top: 25px;
+  border: 1px solid black;
 }
 
 .row {
   white-space: pre-wrap;
   height: 80px;
   border-top: 1px solid white;
-  border: 1px solid black;
-  
-}
+ }
 
 .hour {
   background-color: #ffffff;
